[package]
name = "rusty-link"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.0"
async-trait = "0.1.75"
async-stream = "0.3.5"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "*"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
lru = "0.12.1"
chrono = "0.4.31"
url = "2.5.0"
http = "1.0"
futures-util = "0.3"
thiserror = "1.0.52"
scc = "2.0.8"

[dev-dependencies]
env_logger = "0.10.0"
